--- a/charts/cp-kafka/templates/headless-service.yaml
+++ b/charts/cp-kafka/templates/headless-service.yaml
@@ -8,10 +8,10 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  type: LoadBalancer
   ports:
     - port: 9092
       name: broker
-  clusterIP: None
   selector:
     app: {{ template "cp-kafka.name" . }}
     release: {{ .Release.Name }}
