--- a/charts/cp-zookeeper/templates/headless-service.yaml
+++ b/charts/cp-zookeeper/templates/headless-service.yaml
@@ -8,12 +8,12 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  type: LoadBalancer
   ports:
     - port: {{ .Values.serverPort }}
       name: server
     - port: {{ .Values.leaderElectionPort }}
       name: leader-election
-  clusterIP: None
   selector:
     app: {{ template "cp-zookeeper.name" . }}
     release: {{ .Release.Name }}
